# AI_Game_Forge

./: .gitattributes  .gitignore  AGENT_EXECUTION_PROTOCOL.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  diff.md  eslint.config.js  implementation_plan.md  index.html  notes.txt  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
doc/: AI_Game_Forge_Report.md  GameCraft_AI_Studio_Architecture_Report.md  figma_page_review.md  figma_ui_spec.md  web_ux_review.md  模块功能清单.md  测试与构建命令流程.md  说明.md
scripts/: workflow.ps1
src/: app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/00000000000001_initial/: down.sql  up.sql
src-tauri/migrations/202603140001_add_wizard_states/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: mod.rs  repository.rs  schema.rs
src-tauri/src/database/migrations/: mod.rs
src-tauri/src/ipc/: ai_engine.rs  api_stats.rs  auth.rs  game_config.rs  mod.rs  project.rs  unity_bridge.rs  wizard.rs
src-tauri/src/models/: ai_log.rs  api_stats.rs  auth_session.rs  game_spec.rs  mod.rs  project.rs  user.rs
src-tauri/src/providers/: baidu.rs  claude.rs  local.rs  mod.rs  openai.rs  zhipu.rs
src-tauri/src/services/: ai_collab_service.rs  api_mgmt_service.rs  audit_service.rs  auth_service.rs  game_config_service.rs  mod.rs  project_service.rs  provider_manager.rs  unity_bridge_service.rs  user_service.rs
src-tauri/src/utils/: config.rs  crypto.rs  error.rs  logger.rs  mod.rs  serialization.rs  validation.rs
src-tauri/tests/business_logic/: smoke.rs
src-tauri/tests/data_layer/: repository_smoke.rs
src-tauri/tests/infrastructure_layer/: smoke.rs
src/lib/: App.svelte
src/lib/components/auth/: EmailRegister.svelte  LoginForm.svelte  LoginPage.svelte  PhoneVerify.svelte  WechatQR.svelte
src/lib/components/canvas/: AICanvas.svelte
src/lib/components/dashboard/: Dashboard.svelte
src/lib/components/project/: ProjectManager.svelte
src/lib/components/settings/: UserSettings.svelte
src/lib/components/stats/: APIStatsDashboard.svelte
src/lib/components/wizard/: ConfigWizard.svelte
src/lib/services/: auth.service.ts  tauri.service.ts  unity.service.ts  validation.service.ts  wizard.service.ts
src/lib/stores/: ai.store.ts  auth.store.ts  game.store.ts  user.store.ts
src/lib/types/: ai.types.ts  auth.types.ts  game.types.ts  unity.types.ts  user.types.ts  wizard.types.ts
src/styles/: app.css
test/presentation/: auth.service.test.ts  validation.service.test.ts
