[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
diesel = { version = "2.0", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "2.0"
r2d2 = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
ring = "0.17"
argon2 = "0.5"
jsonwebtoken = "9.0"
oauth2 = { version = "4.0", features = ["reqwest"] }
