[package]
name = "gamecraft-ai-studio"
version = "0.1.0"
description = "GameCraft AI Studio - AI协作式游戏生成工具"
authors = ["GameCraft Team"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["api-all", "shell-open", "system-tray", "updater", "process-command-api"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
r2d2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }

# Tauri specific
tauri-plugin-log = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"

# Additional dependencies
config = "0.13"
dirs = "5.0"
pathdiff = "0.2"
lazy_static = "1.4"
regex = "1.10"
percent-encoding = "2.3"
blake3 = "1.5"
rusqlite = { version = "0.30", features = ["bundled"] }
async-trait = "0.1"
futures = "0.3"

[features]
default = []
local-model = ["ollama-rs"]
sqlite-bundled = ["rusqlite/bundled"]

[dev-dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tempfile = "3.10"

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "gamecraft-ai-studio"
path = "src/main.rs"
